# attention-schema-py

./: .gitignore  README.md  pyproject.toml
attention_schema/: __init__.py  __main__.py  attention.py  controller.py  dissociation.py  llm.py  schema.py  social.py  tokenizer.py
docs/: README.md  examples.md  implementation.md  review.md
eval/: __init__.py  __main__.py  baseline.py  judge.py  metrics.py  runner.py  scenarios.py
tests/: test_attention.py  test_competitive_attention.py  test_controller.py  test_dissociation.py  test_schema.py  test_social.py
