[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "attention-schema"
version = "0.1.0"
description = "An LLM app implementing Michael Graziano's Attention Schema Theory"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["attention_schema*"]
